--- a/src/components/layout/navbar/navbar.module.css
+++ b/src/components/layout/navbar/navbar.module.css
@@ -14,6 +14,10 @@
     display: flex;
 }
 
+.parteUm h1 {
+    margin-top: 2em;
+}
+
 .parteDois {
     display: flex;
     align-items: center;
@@ -23,10 +27,22 @@
     display: flex;
     gap: 2em;
     align-items: center;
+
+    height: 140px;
+    margin-left: 2em;
 }
 
 .lista li {
     list-style: none;
+    cursor: pointer;
+    height: 58%;
+    align-items: center;
+    justify-content: center;
+    padding-top: 4em;
+}
+
+.lista li:hover {
+    border-bottom: 5px solid hsl(26, 100%, 55%);
 }
 
 .foto {
